Fixed bug #26604 (Apache2 SAPIs implicitly disable Keep-Alive). (Ilia)